public/stylesheets/all.css
body#rsvp {
  margin: 2em auto;
  font-family: Sans, Helvetica, Arial, Verdana, sans-serif;
  background: #ddd;
}

#wrapper {
  width: 900px;
  margin: auto;
  background: #fff;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-box-shadow: 0 3px 10px #aaa;
  -moz-box-shadow: 0 3px 10px #aaa;
}

#header {
  height: 100px;
  -webkit-border-top-left-radius: 3px;
  -webkit-border-top-right-radius: 3px;
  -moz-border-radius-topleft: 3px;
  -moz-border-radius-topright: 3px;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
  background-color: #668EBA;
  background-image: -moz-linear-gradient(top, #668EBA, #445B74); /* FF3.6 */
  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #668EBA),color-stop(1, #445B74)); /* Saf4+, Chrome */
  background-image: linear-gradient(top, #668EBA, #445B74);
            filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#668EBA', EndColorStr='#445B74'); /* IE6–IE9 */
}
#header div {
  float: left;
}
#header a {
  color: #333;
  text-decoration: none;
}
#header a:hover {
  background: transparent;
  color: #333;
}
#header .rsvp {
  font-weight: bold;
  font-size: 3.5em;
  height: 55px;
  padding: 45px 20px 0;
  color: #333;
  text-shadow: 0 1px 0 #A0BC67;
  border-right: 1px #525E3C solid;
  background-image: -moz-linear-gradient(top, #92B34D, #525E3C); /* FF3.6 */
  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #92B34D),color-stop(1, #525E3C)); /* Saf4+, Chrome */
  background-image: linear-gradient(top, #92B34D, #525E3C);
            filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#92B34D', EndColorStr='#525E3C'); /* IE6–IE9 */
  -webkit-border-top-left-radius: 3px;
  -moz-border-radius-topleft: 3px;
  border-top-left-radius: 3px;
}
#header .hou {
  font-family: Meddon, Garamond, serif;
  font-size: 4.25em;
  text-shadow: 0 1px 0 #5A8CB1;
  padding: 0.8em 0 0 0.5em;
}

#id {
  float: right;
  padding: 0.5em 0 0 0;
  font-size: 1.2em;
}
h1 {
  font-size: 2em;
  font-weight: normal;
  margin-bottom: 1em;
}
h2 {
  font-weight: normal;
  background: #DDE3CF;
  padding: 0.5em 15px;
  margin: 1.5em -15px 0.5em;
}

.bar {
  clear: both;
  background: #ddd;
  padding: 0.2em 0.5em;
}

#main {
  position: relative;
  padding: 15px;
  background-color: #fff;
  background-image: -webkit-gradient(
    linear,
    left top,
    left 60,
    color-stop(0, #ccc),
    color-stop(1, #fff)
  );
  background-image: -moz-linear-gradient(
    center top,
    #ccc 0,
    #fff 60px
  );
  background-image: linear-gradient(top, #cccccc, #ffffff);
                  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#cccccc', EndColorStr='#ffffff'); /* IE6–IE9 */
  -webkit-border-bottom-right-radius: 3px;
  -webkit-border-bottom-left-radius: 3px;
  -moz-border-radius-bottomright: 3px;
  -moz-border-radius-bottomleft: 3px;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

#main a:hover {
  color: #555;
  background: #eee;
}

.clearfix:before, .clearfix:after {  content: "\0020"; display: block; height: 0; visibility: hidden;    }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }

.input input, .input textarea {
  vertical-align: top;
}

form.button_to, form.button_to > div {
  display: inline;
}

.input {
  clear: left;
}
.input label {
  font-weight: bold;
  color: #777;
  display: block;
  padding: 0.5em 0;
}
.input.checkbox label, .input.select label {
  display: inline;
}
.input.checkbox input, .input.select input {
  vertical-align: top;
  width: auto;
}
.input input, .input textarea {
  padding: 0.5em;
  vertical-align: middle;
  font-size: 1.2em;
  font-family: Sans, Helvetica, Arial, Verdana, sans-serif;
  background: url(../images/input-background.png) 0 0 no-repeat;
  border: 1px #aaa solid;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
}
.input input:focus, .input textarea:focus {
  -webkit-box-shadow: 0 0 5px #2B84CC;
  -moz-box-shadow: 0 0 5px #2B84CC;
  box-shadow: 0 0 5px #2B84CC;
  border-color: #888;
  outline: none;
}
.submit {
  margin: 1.5em 0.2em 1em;
}
.submit input {
  font-size: 20px;
  cursor: pointer;
  color: #333;
  font-weight: bold;
  padding: 7px 15px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-box-shadow: #777 0 1px 3px;
  -moz-box-shadow: #222 0 1px 3px;
  box-shadow: #222 -1px 1px 3px;
  text-shadow: 0 1px 0 #8BAA4B, 0 0 10px #8BAA4B;
  border: 0;
  text-decoration: none;
  background: #84a049 url(../images/button-green.png) 0 0 repeat-x;
}
.submit input:hover {
  background-position: 0 -40px;
}
.submit input:active {
  background-position: 0 -80px;
}

dl dt {
  font-size: 1.2em;
  margin: 1em 0 0;
  padding: 0;
}
dl dt:first-child {
  margin-top: 0;
}
dl dd {
  margin: 0.2em;
  padding: 0;
}

.columns.two .column {
  width: 50%;
  float: left;
}
.columns.two .column.right {
  float: right;
}
.columns.c4060 .column {
  width: 40%;
}
.columns.c4060 .column.right {
  width: 60%;
}

td {
  vertical-align: top;
}

.flash {
  position: absolute;
  top: 0;
  right: 15px;
  border: 1px #E5DD76 solid;
  background: #ffface;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  padding: 1em;
  width: 300px;
  margin: 1em 0 1em 1em;
  font-size: 1.35em;
  line-height: 120%;
}

